# C_STL

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
C_STL/: Export.h  List.c  List.h  Pool.c  Pool.h  Vector.c  Vector.h  stlString.c  stlString.h
C_STL_Test/: main.c  test_suite.c  test_suite.h
ContainerC/: CSTL.rar  ContainerC.sln  autoconfig.bat  autoconfigR.bat
ContainerC/CSTL/include/: Export.h  List.h  String.h  Vector.h
ContainerC/CSTL/lib/: CSTL.lib
ContainerC/ContainerC/: ContainerC.vcxproj  ContainerC.vcxproj.filters  Export.h  List.c  List.h  Map.h  Pool.c  Pool.h  Source.c  String.c  String.h  Vector.c  Vector.h
ContainerC/ContainerC/x64/Debug/: pool.obj.enc
ContainerC/DLL/: DLL.vcxproj  DLL.vcxproj.filters  List.c  Pool.c  Pool.h  String.c  String.h  Vector.c  Vector.h
ContainerC/DLL/x64/Release/: CSTL.iobj  CSTL.ipdb
ContainerC/Test_DLL/: Test_DLL.c  Test_DLL.vcxproj  Test_DLL.vcxproj.filters
ContainerC/x64/Debug/: ContainerC.exp  ContainerC.lib
